# axum-folder-router-htmx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
migrations/: 20250414000706_first_table.down.sql  20250414000706_first_table.up.sql  20250414044504_personal_values.down.sql  20250414044504_personal_values.up.sql  20250414045800_values_have_heirarchy.down.sql  20250414045800_values_have_heirarchy.up.sql
public/css/: global.css  style.css
src/: main.rs  model.rs
src/api/: route.rs  routes.rs
src/api/app/: route.rs
src/api/hey/: route.rs
src/api/items/: route.rs
src/api/login/: route.rs
src/api/logout/: route.rs
src/api/shout/: route.rs
src/api/ui/: route.rs
src/api/values/: route.rs
src/services/: auth.rs  mod.rs
templates/: app.html  base.html  items.html  landing_page.html  login.html  shout.html  ui_kitchen_sink.html  values.html
