[package]
name = "axum-folder"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
askama = "0.13.0"
axum = "0.8"
axum-extra = { version = "0.10.1", features = ["form","cookie","cookie-private"] }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
